@@ -3,5 +3,8 @@ add credits to twc!
 defaultconfig.php?
 translation-hints
 
+Version 1alpha2 - released 2012-03-29
+cmb	fixed bug: changing the selectbox was not possible under IE (reported by wolfgang_58)
+
 Version 1alpha1 - released 2011-12-05
 cmb	initial release
